...
                android:focusableInTouchMode="true"
                android:visibility="gone"
                />

        <!-- minute -->
        <NumberPicker
                android:id="@+id/minute"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:theme="@style/MyAppTheme.NumberPicker" />

        <!-- seconds -->
        <NumberPicker
                android:id="@+id/seconds"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:theme="@style/MyAppTheme.NumberPicker" />
...
